--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,14 @@
   <title>HelpDesk</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <link rel="stylesheet" href="assets/bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/bower_components/Ionicons/css/ionicons.min.css">
   <link rel="stylesheet" href="assets/bower_components/jvectormap/jquery-jvectormap.css">
   <link rel="stylesheet" href="assets/css/AdminLTE.min.css">
   <link rel="stylesheet" href="assets/css/skins/_all-skins.min.css">
-  <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+  
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
   <app-root>
